--- a/style.css
+++ b/style.css
@@ -1,108 +1,336 @@
+
 body{
-
-
     background-color:bisque;
-    background-image: url("./98b474780c2ce09162813d6423f4827a.png");
-    height: 5000px;
-    width: 5000px;
-    
-
-    
-    
-    
-    
-    
-
-   
-
-
+    height: 2500px;
+    width: 3000px;
+    overflow-x: hidden;
 }
-    
-
-   
- 
-    /* background-position-x:right;
-    background-position-y:center; */
-
-/* 
-#logo{
-    position: relative;
-    bottom: 3200px;
-    right: 2900px;
-    height: 200px;
-    width: 200px;
-    border-radius:500px;
-}
-.bi{
-    position:absolute;
-    text-align: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size:bolder;
-    bottom:1200;
-
-
-}
-span{
+.logo{
     position: absolute;
-    text-align: center;
-    font-family: Georgia, Times, 'Times New Roman', serif;
-    font-size: 300px;
-    bottom: 9200px;
-    right:5889px;
-    /* top: 2900px; */
-    
-    
+    margin-left: 0%;
+    height: 100px;
+    width: 100px;
 }
-.foo{
-    position: relative;
-    /* text-align: center; */
-    font-family:'Gill Sans', 'Gill Sans MT',  'Trebuchet MS', sans-serif;
-    font-size: 200px;
-    bottom: 3400px;
-    right:3989px;
+.mainimg{
+    position: absolute;
+    height: 700px;
+    width: 700px;
+    left: 700px;
+    bottom: -20px;
 }
-#para{
-    position: relative;
-    text-align: center;
-    font-size: 200px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode',  Verdana, sans-serif;
-    bottom: 3000px;
-    right:1000px;
+h1{
+    position: absolute;
+    font-size: 10rem;
+    top: 125px;
+    left: 150px;
 }
-
+h2{
+    position: absolute;
+    font-size: 3rem;
+    top: 243px;
+    left: 235px; 
+}
 p{
+    position: absolute;
+    font-size: 2rem;
+    top: 363px;
+    left: 150px;   
+}
+.specialdish{
+    position: absolute;
+    font-size: 4.5rem;
+    font-weight: bolder;
+    top: 650px;
+    left: 40px;
+}
+.arrow{
+    position: absolute;
+    top: 740px;
+    left: 680px;
+    height: 50px;
+    width: 50px;
+}
+#menufood{
     position: relative;
+    top: 650px;
+    left: 880px;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px; 
+    object-fit: cover;
+}
+#menufood:hover {
+    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.1);
+    transform: scale(1.1);
+}
+#meal-details {
+    position: absolute;
+    top: 3280px;
+    left: 20px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    width: 1000px;
+}
+
+#meal-details h2 {
+    margin-top: -220px;
     text-align: center;
-    font-size: 300px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode',  Verdana, sans-serif;
-    bottom: 3000px;
-    right:3200px;
+    color: red;
+}
 
+#meal-details h3 {
+    margin-top: 120px;
+    font-size: 30px;
+    color: red;
 }
-#arrow{
-    position:relative;
-    bottom:4960px;
-    right: 489px;
 
+
+#meal-details ul {
+    margin-bottom: 10px;
+    margin-left: 0;
+    padding-left: 20px; 
 }
-.cake{
-    position: relative;
-    height: 1500px;
-    width: 1500px;
-    right: 379px;
-    bottom: 4900px;
-    border-radius: 40px;   
+#meal-details li {
+    list-style-type: none;
 }
-#ypu{
-    position: relative;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode',  Verdana, sans-serif;
-    font-size: 200px;
-    bottom: 3000px;
-    right:2100px;
+
+#meal-details p {
+    margin: 0;
+    margin-top: 100px;
+    position: absolute;
+    top: 60px;
+    left: 460px;
+    margin-left: 0;
+    font-size: 15px;
 }
-#back{
-    position:absolute;
-    right: 900px;
+.container1 img {
+    max-width: 40%;
+    gap: 10px;
+    height: auto;
+}
+
+
+.food{
+    position: absolute;
+    font-size: 2.75rem;
+    font-weight: bolder;
+    top: 1000px;
+    left: 40px;
+}
+.search-container {
+    display: flex;
+    justify-content: center;
+    top: 1030px;
+    position: absolute;
+    left: 740px;
+}
+
+input[type=search] {
+    padding: 10px;
+    width: 300px;
+    border-radius: 5px 0 0 5px;
+    border: 1px solid #ccc;
+}
+
+button[type=submit] {
+    padding: 10px 15px;
+    background-color: #4CAF50;
+    color: white;
+    border: 1px solid #4CAF50;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+}
+
+button[type=submit]:hover {
+    background-color: #45a049;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    padding: 20px;
+    position: absolute;
+    top: 1100px;
+}
+
+.grid-item {
+    text-align: center;
+}
+.circle-image:hover {
+    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.1);
+    transform: scale(1.1);
+}
+
+.circle-image {
+    border-radius: 50%;
+    width: 150px;
+    height: 150px; 
+    object-fit: cover;
+}
+#mealDetailsContainer {
+    position: absolute;
+    top: 3280px;
+    left: 20px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    width: 1000px;
+}
+
+#mealDetailsContainer h2 {
+    margin-top: -220px;
+    text-align: center;
+    color: red;
+}
+
+#mealDetailsContainer h3 {
+    margin-top: 120px;
+    font-size: 30px;
+    color: red;
+}
+
+#mealDetailsContainer ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+#mealDetailsContainer ul li {
+    margin-bottom: 6px;
+}
+
+#mealDetailsContainer p {
+    margin: 0;
+    margin-top: 100px;
+    position: absolute;
+    top: 60px;
+    left: 460px;
+    margin-left: 0;
+    font-size: 15px;
+}
+
+.review{
+    position: absolute;
+    top: 1900px;
+    left: 40px;
+    font-size: 2rem;
+    font-weight: bolder;
+}
+#ph1{
+    position: absolute;
+    top: 2000px;
+    left: 40px;
     width: 500px;
-    height: 500px;
-} */
+    height: 400px;
+}
+#ph2{
+    position: absolute;
+    top: 2430px;
+    left: 40px;
+    width: 500px;
+    height: 400px;
+}
+#ph3{
+    position: absolute;
+    top: 2000px;
+    left: 590px;
+    width: 700px;
+    height: 820px;
+}
+#review{
+    position: absolute;
+    top: 2800px;
+    font-size: 4rem;
+    left: 80px;
+}
+/* footer of the website  */
+.down{
+    background-color: #ccc;
+    position: relative;
+    top: 3850px;
+    width: 1400px;
+    height: 130px;
+    padding: 10px; 
+    text-align: center;
+}
+.content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 800px; 
+    position: relative;
+    top: -250px;
+}
+
+.logo1 {
+    max-height: 100px;
+    border-radius: 30%;
+    overflow: hidden;
+    position: absolute;
+    left: 50px;
+    bottom:  -310px;
+}
+.name {
+    margin: 0;
+    left: 200px;
+    position: relative;
+    top: 250px;
+    font-size: 3rem;
+}
+
+/* responsive style */
+@media only screen and (max-width: 768px) {
+    h1 {
+        font-size: 6rem;
+        top: 50px; 
+        left: 30px; 
+    }
+}
+h2 {
+    font-size: 2rem;
+    top: 110px; 
+    left: 90px;
+}
+p {
+    font-size: 3rem;
+    top: 200px; 
+    left: 50px; 
+}
+.specialdish {
+    font-size: 3.5rem; 
+    top: 500px; 
+    left: 20px; 
+}
+.food {
+    font-size: 2rem;
+    top: 800px;
+    left: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+    
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
+
