--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body{
     background-color:bisque;
     height: 2500px;
@@ -279,58 +278,124 @@ button[type=submit]:hover {
     top: 250px;
     font-size: 3rem;
 }
+/* responive style  */
 
-/* responsive style */
-@media only screen and (max-width: 768px) {
-    h1 {
-        font-size: 6rem;
-        top: 50px; 
-        left: 30px; 
+@media only screen and (max-width: 760px) {
+    .logo{
+        height: 50px;
+        width: 50px;
     }
+    .mainimg{
+        height: 400px;
+        width: 400px;
+        left: 150px;
+        bottom: 190px;
+    }
+    h1{
+        font-size: 5rem;
+        left: 50px;
+        top: 150px;
+    }
+    h2{
+        font-size: 1.5rem;
+        top: 218px;
+        left: 88px; 
+    }
+    p{
+        left: 70px;
+        font-size: 1rem;
+        top: 270px;
+    }
+    .specialdish{
+        font-size: 2rem;
+        top: 420px;
+    }
+    .arrow{
+        top: 460px;
+        left: 300px;
+    }
+    #menufood{
+        left: 380px;
+        width: 75px;
+        height: 75px;
+        top: 435px;
+    }
+    .food{
+        font-size: 1.5rem;
+        top: 550px;
+        left: 50px;
+    }
+    .search-container{
+        left: 100px;
+        top: 600px;
+    }
+    .grid-container{
+        grid-template-columns: repeat(2, 1fr);
+        top: 650px;
+    }
+    .circle-image{
+        width: 200px;
+        height: 200px;
+    }
+    .review{
+        top: 1300px;
+    }
+    #ph1{
+        top: 1390px;
+        width: 150px;
+        height: 150px;
+    }
+    #ph2{
+        top: 1550px;
+        width: 150px;
+        height: 150px;
+    }
+    #ph3{
+        top: 1390px;
+        width: 260px;
+        height: 300px;
+        left: 200px;
+    }
+    #review{
+        font-size: 1.45rem;
+        top: 1700px;
+    }
+    #meal-details{
+        top: 1900px;
+        width: 500px;
+    }
+    #meal-details p {
+        left: -10px;
+        top: 500px;
+        font-size: 14px;
+        width: 400px;
+    }
+    .down{
+        top: 2900px;
+    }
+    body{
+        height: 3000px;
+        overflow-x: hidden;
+    }
+    .logo1{
+        max-height: 60px;
+        left: 10px;
+        bottom: -300px;
+    }
+    .name{
+        font-size: 2rem;
+        top: 250px;
+        left: -300px;
+    }
+    #mealDetailsContainer {
+        top: 1900px;
+        width: 500px;
+    }
+    #mealDetailsContainer p{
+        left: -10px;
+        top: 550px;
+        font-size: 14px;
+        width: 400px;
+    }
+
 }
-h2 {
-    font-size: 2rem;
-    top: 110px; 
-    left: 90px;
-}
-p {
-    font-size: 3rem;
-    top: 200px; 
-    left: 50px; 
-}
-.specialdish {
-    font-size: 3.5rem; 
-    top: 500px; 
-    left: 20px; 
-}
-.food {
-    font-size: 2rem;
-    top: 800px;
-    left: 20px;
-}
-
-
-
-
-
-
-
-
-
-
-    
-
-
-
-
-
-
-
-
-
-
-
-
-  
-
-
